--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
+    "mongodb": "^5.9.2",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
